src/test/ui/consts/projection_qualif.stderr
error[E0017]: references in constants may only refer to immutable values
  --> $DIR/projection_qualif.rs:6:27
   |
LL |         let b: *mut u32 = &mut a;
   |                           ^^^^^^ constants require immutable values

error[E0019]: constant contains unimplemented expression type
  --> $DIR/projection_qualif.rs:7:18
   |
LL |         unsafe { *b = 5; }
   |                  ^^^^^^

error[E0658]: dereferencing raw pointers in constants is unstable
  --> $DIR/projection_qualif.rs:7:18
   |
LL |         unsafe { *b = 5; }
   |                  ^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/51911
   = help: add #![feature(const_raw_ptr_deref)] to the crate attributes to enable

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0017, E0019, E0658.
For more information about an error, try `rustc --explain E0017`.
